Tue Jun  8 14:10:08 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/ciao/CCM_Core.mpc:
	  Fixed source file placement.

Tue Jun  8 10:35:32 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:

	  Added dump function to dump connections.

Tue Jun  8 10:16:48 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/RepositoryManager/Repository_Manager.cpp:

          Added diagnostic comments to aid in debugging during execution
          of the Executor.

Tue Jun  8 09:55:41 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/Repository_Manager.cpp:

          Commented out certain un-necessary DEBUG statements.

Tue Jun  8 02:53:32 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:
	  Rewritten the connection part of the interface.
	  Enhanced the performace by avoiding excessive deep copy and
	  better condition branching. Also added exception mechanism in
	  the connction part.

Mon Jun  7 21:22:03 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.inl:
	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.h:
	  Finished this interface implementation.

	* DnC/ciao/ImplementationInfo.h:
	  Added this file containing the templated helper operators.

Mon Jun  7 15:44:51 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/ExecutionManager/Execution_Manager.cpp:
        * DnC/ExecutionManager/ExecutionManager.mpc:

          First cut at writing the executor that is used to start
          deployment process and terminate it. Changed the mpc file to
          rename the generated executable to be named executor as
          described in the specification.
