@@ -1,3 +1,15 @@
+Tue Jun  8 14:15:31 2004  Gan Deng  <dengg@dre.vanderbilt.edu>
+
+	* DnC/Config_Handlers/Utils.h:
+
+          Fixed the Windows export library problem.
+
+	* DnC/RepositoryManager/RepositoryManager_Impl.cpp:
+
+	  Added "return" to those unimplemented functions to makde the
+          compiler happy.
+
+
 Tue Jun  8 14:10:08 2004  Tao Lu  <lu@dre.vanderbilt.edu>
 
 	* DnC/ciao/CCM_Core.mpc:
